Fix display issues, increment years
* Add background to text input area to prevent overlap on Android devices when keyboard is open
* Fix text alignment issues on Safari

* Update years to 2022-2023
* Rename files to match years

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,8 @@ img { /* image of viking head */
     left: 3%;
     width: 94%;
     display: flex;
+    height: 1.3em;
+    background-color: var(--background-color);
 }
 #input { /* text input including "signature line" */
     background-color: inherit;
